# micap

./: .buildinfo  .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  CI_DEPENDENCY_FIXES.md  CI_FIX_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCS_CI_FIX_SUMMARY.md  Dockerfile  Dockerfile.dev  IMPROVEMENTS_SUMMARY.md  Makefile  README.md  create_configs.py  docker-compose.prod.yml  docker-compose.yml  docstring_coverage_report.txt  env.example  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  shell-script.sh  src.api.html  src.html  src.ml.html  src.spark.html  src.utils.html  temp_test.py  test_fuzzywuzzy.py  test_integration_fuzzywuzzy.py  test_phase2_minimal.py  test_phase2_optimized.py  test_phase2_quick.py
.cursor/rules/: advanced-data-science-and-big-data-analytics.mdc  config-and-env-managemenet.mdc  documentation-and-code-quality.mdc  fast-api-machine-learning-api-development.mdc  main-custom-development.mdc  micap-arch-and-standards.mdc  nlp-and-sentiment-analysis-system.mdc  pipeline-testing-standards.mdc
.github/scripts/: install_dependencies.sh
.github/workflows/: advanced-ci.yml  ci.yml  documentation.yml
_sources/: index.rst.txt  src.api.rst.txt  src.ml.rst.txt  src.rst.txt  src.spark.rst.txt  src.utils.rst.txt
config/: __init__.py  spark_config.py
config/brands/: brand_config.json
cursor_reports/: CI_CD_SUMMARY.md  FUZZYWUZZY_INTEGRATION_SUMMARY.md  PIPELINE_FIX_SUMMARY.md  cicd_validation_report.txt
data/analytics/: phase2_summary.json
data/analytics/insights/: competitive_insights.json
data/analytics/topics/: topic_descriptions.json
data/analytics/trends/: topics.json
data/models/: benchmark_results.csv  deep_learning_results.json  model_comparison.csv  model_comparison.json  performance_report.md  pipeline_results_colab.json
data/processed/pipeline_feature_stats/: .part-00000-99e5eafa-60d8-48f1-8656-d8b88b2fdde5-c000.json.crc  part-00000-99e5eafa-60d8-48f1-8656-d8b88b2fdde5-c000.json
data/processed/pipeline_features/: .part-00000-517b0910-28a4-4cfc-b84e-73983af72622-c000.snappy.parquet.crc  .part-00000-a1634db0-8c09-4cb9-b1ca-466599ba8394-c000.snappy.parquet.crc  .part-00001-a1634db0-8c09-4cb9-b1ca-466599ba8394-c000.snappy.parquet.crc  .part-00002-a1634db0-8c09-4cb9-b1ca-466599ba8394-c000.snappy.parquet.crc  .part-00003-a1634db0-8c09-4cb9-b1ca-466599ba8394-c000.snappy.parquet.crc  part-00000-517b0910-28a4-4cfc-b84e-73983af72622-c000.snappy.parquet
data/processed/pipeline_features_fallback/: .part-00000-3edc3f90-84a4-414a-a651-7da124f675dc-c000.snappy.parquet.crc  part-00000-3edc3f90-84a4-414a-a651-7da124f675dc-c000.snappy.parquet
data/processed/pipeline_preprocessed/: .part-00000-bf3d2680-53d7-4119-9eca-9c714b8bf62c-c000.snappy.parquet.crc  .part-00000-d5a33e6d-336e-414f-a88c-de6166c5c8c0-c000.snappy.parquet.crc  .part-00001-d5a33e6d-336e-414f-a88c-de6166c5c8c0-c000.snappy.parquet.crc  .part-00002-d5a33e6d-336e-414f-a88c-de6166c5c8c0-c000.snappy.parquet.crc  .part-00003-d5a33e6d-336e-414f-a88c-de6166c5c8c0-c000.snappy.parquet.crc  part-00000-bf3d2680-53d7-4119-9eca-9c714b8bf62c-c000.snappy.parquet  part-00000-d5a33e6d-336e-414f-a88c-de6166c5c8c0-c000.snappy.parquet  part-00002-d5a33e6d-336e-414f-a88c-de6166c5c8c0-c000.snappy.parquet
data/processed/pipeline_sample/: .part-00000-a8ff21ec-ad0d-423a-bf78-20a03fbe32eb-c000.snappy.parquet.crc  .part-00000-af1d8271-4240-450c-89c3-a8a594a1a786-c000.snappy.parquet.crc  .part-00001-af1d8271-4240-450c-89c3-a8a594a1a786-c000.snappy.parquet.crc  .part-00002-af1d8271-4240-450c-89c3-a8a594a1a786-c000.snappy.parquet.crc  .part-00003-af1d8271-4240-450c-89c3-a8a594a1a786-c000.snappy.parquet.crc  part-00000-a8ff21ec-ad0d-423a-bf78-20a03fbe32eb-c000.snappy.parquet  (+3 more)
docs/: Project (2 phases).md  conf.py  index.rst  phase.txt
docs/_static/: custom.css
notebooks/: BD_Sentiment_ML_Models_Learning.ipynb  model_evaluation.ipynb  phase1_validation.ipynb  test_data_ingestion.ipynb
scripts/: __init__.py  benchmark_performance.py  build_docker.sh  build_docs.py  check_docstrings.py  download_data.py  model_performance_report.py  run_phase1_pipeline.py  run_phase2_pipeline.py  run_phase2_pipeline_fixed.py  setup_cicd.py  test_phase2.py  test_yaml_import.py  train_all_models.py  validate_dependencies.py
src/: __init__.py
src/api/: __init__.py  main.py
src/ml/: __init__.py  deep_learning_models.py  entity_recognition.py  sentiment_models.py  trend_detection.py
src/spark/: __init__.py  competitor_analysis.py  data_ingestion.py  feature_engineering.py  preprocessing.py  temporal_analysis.py  topic_analysis.py
src/utils/: __init__.py  pandas_stream.py  path_utils.py
tests/: run_preprocessing_tests.py  test_complete_verification.py  test_phase1_pipeline.py  test_topic_analysis.py
tests/integration/: test_phase2_integration.py  test_phase2_minimal.py
tests/unit/: ML_TESTS_STATUS_REPORT.md  README_deep_learning_tests.md  README_preprocessing_tests.md  debug_volume_test.py  quick_test_verification.py  quick_verification.py  run_competitor_analysis_tests.py  run_deep_learning_tests.py  run_entity_recognition_tests.py  run_sentiment_models_tests.py  run_trend_detection_tests.py  test_competitor_analysis.py  test_deep_learning_models.py  test_entity_recognition.py  test_phase2_lightweight.py  test_preprocessing.py  test_run_phase2_pipeline.py  test_sentiment_models.py  test_trend_detection.py  verify_all_fixes.py
(+40 files in other folders)
